--- a/Infinity_2_0_0/Infinity_2_0_0/index.html
+++ b/Infinity_2_0_0/Infinity_2_0_0/index.html
@@ -61,7 +61,7 @@
             <nav class="s-header__nav">
 
                 <a href="#0" class="s-header__nav-close-btn" title="close"><span>Close</span></a>
-                <h3>Infinity.</h3>
+                <h3>Realitätärätätä.</h3>
 
                 <ul class="s-header__nav-list">
                     <li><a href="#intro" class="smoothscroll">Start</a></li>
@@ -316,7 +316,7 @@
                         <div class="map-container">
                             <a href="https://www.google.de/maps/place/Wohn-+und+Kulturprojekt+Kirnhalden+eG/@48.1970901,7.8439559,17z/data=!3m1!4b1!4m6!3m5!1s0x47912567e589207f:0xa04bb3409386e6e0!8m2!3d48.1970866!4d7.8465308!16s%2Fg%2F11s51s9f1f?entry=ttu"
                                 target="_blank" class="map-link">
-                                <img src="images/maps.png" alt="Karte" class="map-image">
+                                <img src="images/maps.PNG" alt="Karte" class="map-image">
                             </a>
                             <h5 class="map-address">
                                 Wohn- und Kulturprojekt  <br/>
