--- a/Infinity_2_0_0/Infinity_2_0_0/index.html
+++ b/Infinity_2_0_0/Infinity_2_0_0/index.html
@@ -151,6 +151,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="infos"></div> <!-- for menu -->
                 </div>
 
             <!-- Info-Circles
