--- a/Infinity_2_0_0/Infinity_2_0_0/index.html
+++ b/Infinity_2_0_0/Infinity_2_0_0/index.html
@@ -125,7 +125,7 @@
                                 <p>
                                     Vorweg: 
                                     <span class="bold">Komm doch einfach per Bahn, Rad oder Shuttle.</span> 
-                                    Dann können wir uns den Rest sparen :) Falls du aus guten Gründen (die es natürlich gibt), nicht auf deine Karre verzichten kannst oder willst, dann bitte jetzt gut aufpassen:
+                                    Dann können wir uns den Rest sparen. Falls du aus guten Gründen (die es natürlich gibt), nicht auf deine Karre verzichten kannst oder willst, dann bitte jetzt gut aufpassen:
                                     <br/>
                                 </p> 
                                 <h4>
@@ -182,7 +182,7 @@
                                     </h4>
                                     <h4 class="folio-item__title">
                                         <span class="bold">
-                                            Alle nervige Scheiße wie Sexismus, Rassismus, Faschismus hat auf dem Gelände nix verloren.
+                                            Alle nervige Diskriminierungs-Scheiße jeglicher Art wie Sexismus, Rassismus, Faschismus, Queerfeindlichkeit und Ableismus haben auf dem Gelände nix verloren.
                                         </span>
                                     </h4>
                                     <h4 class="folio-item__title">
